# pet-eval

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  params.yaml  pyproject.toml
.github/workflows/: ci.yml  no-wandb-residue.yml  peer-dep-smoke.yml
benchmark/: README.md
configs/fusion/: weighted.yaml
docs/: architecture.md  phase-3a-audit.md
docs/superpowers/plans/: 2026-04-15-pet-eval-implementation.md
docs/superpowers/specs/: 2026-04-15-pet-eval-design.md
recipes/: cross_modal_fusion_eval.yaml
src/pet_eval/: __init__.py  __main__.py  cli.py  logging_setup.py
src/pet_eval/gate/: __init__.py  checker.py  types.py
src/pet_eval/inference/: __init__.py  constrained.py
src/pet_eval/metrics/: __init__.py  anomaly_recall.py  audio_accuracy.py  calibration.py  kl_quantization.py  latency.py  mood_correlation.py  narrative_quality.py  schema_compliance.py  types.py
src/pet_eval/plugins/: _register.py  audio_evaluator.py  gate.py  gate_tiers.py  quantized_vlm_evaluator.py  quantized_vlm_inference.py  vlm_evaluator.py  vlm_inference.py
src/pet_eval/plugins/fusion/: __init__.py  and_gate.py  base.py  single_modal.py  weighted.py
src/pet_eval/plugins/metrics/: anomaly_recall.py  audio_accuracy.py  calibration.py  kl_quantization.py  latency.py  mood_correlation.py  narrative_quality.py  schema_compliance.py  types.py
src/pet_eval/report/: generate_report.py
src/pet_eval/runners/: eval_audio.py  eval_quantized.py  eval_trained.py
tasks/: pet_feeder.py
tests/: conftest.py  test_register_peer_guards.py  test_version.py
tests/peer_dep/: test_smoke_versions.py
tests/plugins/fusion/: test_and_gate.py  test_register.py  test_single_modal.py  test_weighted.py
tests/recipes/: test_fusion_recipe.py
tests/test_gate/: test_checker.py  test_types.py
tests/test_metrics/: test_anomaly_recall.py  test_audio_accuracy.py  test_calibration.py  test_kl_quantization.py  test_latency.py  test_mood_correlation.py  test_narrative_quality.py  test_schema_compliance.py  test_types.py
tests/test_plugins/: test_audio_evaluator.py  test_gate.py  test_gate_tiers.py  test_quantized_vlm_evaluator.py  test_vlm_evaluator.py
tests/test_plugins_metrics/: test_anomaly_recall.py  test_audio_accuracy.py  test_calibration.py  test_kl_quantization.py  test_latency.py  test_mood_correlation.py  test_narrative_quality.py  test_registration.py  test_schema_compliance.py  test_types.py
tests/test_report/: test_generate_report.py
tests/test_runners/: test_eval_audio.py  test_eval_quantized.py  test_eval_trained.py
