[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-eval"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pet-schema==1.0.0",
    "torch>=2.1",
    "transformers>=4.37",
    "torchaudio>=2.1",
    "bert-score>=0.3.13",
    "scipy>=1.11",
    "wandb",
    "pyyaml",
    "tenacity",
    "python-json-logger",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pet_eval", "pet_eval.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pet_schema",
    "pet_schema.*",
    "bert_score",
    "bert_score.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
