[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-eval"
version = "2.5.0"
requires-python = ">=3.11,<3.12"
license = {text = "BUSL-1.1"}
dependencies = [
    "pet-schema",
    "pet-train",  # cross-repo runtime: AudioEvaluator uses pet_train.audio.inference (spec §5.3)
    "pet-quantize",  # cross-repo runtime: QuantizedVlmEvaluator uses pet_quantize.inference.rkllm_runner (spec §5.4)
    "torch>=2.1",
    "transformers>=4.37",
    "torchaudio>=2.1",
    "peft>=0.10",
    "qwen-vl-utils",
    "bert-score>=0.3.13",
    "scipy>=1.11",
    "pyyaml",
    "tenacity",
    "python-json-logger",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "pet_eval",
    "pet_eval.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[project.entry-points."pet_infra.plugins"]
pet_eval = "pet_eval.plugins._register:register_all"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
